# ora-rust

./: .gitignore  Cargo.toml  README.md  TODO.md  build.sh  run.sh
docs/: AGENT_HANDOFF_2026-03-10.md  NEXT_SESSION_PROMPT.md  ORA_MCP_Integration_Marketing_Strategy.md  codex_mcp_stack.md  competitor_analysis_2026.md  ora-research-report.md  ora_rust_execution_backlog_2026.md  ora_rust_finalization_plan.md  ora_rust_marketing_package.md  ora_rust_master_plan_2026.md  ora_rust_release_completion_plan_2026-03-10.md
frontend/: index.html
marketing/: BENCHMARKING_PLAN.md  BRAND_AND_WEBSITE_SPECS.md  ECOSYSTEM_INTEGRATION.md  EMAIL_CAMPAIGNS.md  HUMAN_CENTRIC_GTM_STRATEGY.md  SEO_AND_GTM_STRATEGY.md  SOCIAL_MEDIA_CALENDAR.md  TARGET_AUDIENCE_PERSONAS.md
marketing/campaigns/: SHORT_FORM_VIDEO_SCRIPTS.md
marketing/campaigns/emails/: sequence_1_cold_outreach.md  sequence_2_onboarding.md
marketing/campaigns/social/week_1/: linkedin_posts.md  reddit_posts.md  twitter_posts.md  youtube_and_hashnode.md
marketing/campaigns/social/week_2/: current_events_campaign.md
scripts/: install_codex_mcp_stack.py
src/: config.rs  error.rs  lib.rs  main.rs  runtime.rs  state.rs
src/audit/: logger.rs  mod.rs
src/gateway/: http.rs  mcp.rs  mod.rs  tasks.rs  websocket.rs
src/kernel/: agent.rs  authority.rs  constitution.rs  control_plane.rs  memory.rs  mod.rs  tools.rs  validator.rs  web_search.rs
src/llm/: client.rs  mod.rs  prompts.rs  tools.rs
src/llm/providers/: anthropic.rs  local.rs  mod.rs  openai.rs
src/orchestration/: agent.rs  graph.rs  mod.rs
src/security/: crypto.rs  gates.rs  mod.rs  sandbox.rs  vault.rs
tools/mcp/: brave_search_server.py  codex_architecture_server.py  codex_cli_server.py  jsonrpc_stdio.py
