[package]
name = "ora-rust"
version = "0.1.0"
edition = "2021"
authors = ["OrA Team"]
description = "OrA - Autonomous AI Command Center (Rust Backend)"
license = "MIT"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Cryptography
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
hex = "0.4"

# Async HTTP (for LLM calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
thiserror = "2"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
async-trait = "0.1"
regex = "1.10"
petgraph = "0.6"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
shell-words = "1.1"
walkdir = "2.5"

# Security
rustls = "0.23"
webpki-roots = "0.26"

[lib]
name = "ora_rust"
path = "src/lib.rs"

[[bin]]
name = "ora"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Low-memory build profile (512MB servers, CI, etc.)
[profile.release-server]
inherits = "release"
opt-level = 2
lto = "thin"
codegen-units = 4
